Bug 409247 - Group list - Do not able scroll down on members list
Summary: Group list - Do not able scroll down on members list
Status: RESOLVED FIXED
Alias: None
Product: Ruqola
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-27 13:26 UTC by Marcelo Martins
Modified: 2019-07-09 05:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0
Sentry Crash Report:


Attachments
Group list (38.01 KB, image/png)
2019-06-27 13:26 UTC, Marcelo Martins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcelo Martins 2019-06-27 13:26:48 UTC
Created attachment 121184 [details]
Group list

SUMMARY
If you click on "group list" icon on room with many members, only first members showed. Not possible scroll down to verify all members.


STEPS TO REPRODUCE
1. On a room with many users
2. Click on "group list" icon

Linux/KDE Plasma:  Opensuse Tumbleweed 20190623
(available in About System)
KDE Plasma Version: 5.16.1 
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.3
KErnel version: 5.1.7-1-default
Comment 1 Laurent Montel 2019-07-05 06:09:10 UTC
Indeed. I understand the problem.
I will try to fix it soon.
Comment 2 Laurent Montel 2019-07-09 05:53:44 UTC
Git commit d3e156b34aecd363c3111cc51ce42a35dc43fd26 by Laurent Montel.
Committed on 09/07/2019 at 05:53.
Pushed by mlaurent into branch '1.0'.

Fix Bug 409247 - Group list - Do not able scroll down on members list

FIXED-IN: 1.0

M  +0    -1    src/apps/qml/MainComponent.qml
M  +1    -0    src/apps/qml/SearchLabel.qml
M  +15   -15   src/ruqolacore/model/usersforroommodel.cpp

https://commits.kde.org/ruqola/d3e156b34aecd363c3111cc51ce42a35dc43fd26