Fix Bug 409247 - Group list - Do not able scroll down on members list

FIXED-IN: 1.0
BUG: 409247